# Compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
compiler/core/: CMakeLists.txt  main.cpp
compiler/tests/: CMakeLists.txt
